@@ -1,0 +1,79 @@
+<?xml version="1.0" encoding="windows-1251"?>
+<!DOCTYPE hrd PUBLIC "-//Cail Lomecb//DTD Colorer HRD take5//EN"
+  "http://colorer.sf.net/2003/hrd.dtd">
+<hrd xmlns="http://colorer.sf.net/2003/hrd">
+
+  <assign name="def:Text" fore="#7" back="#1"/>
+  <assign name="def:HorzCross"  fore="#B" back="#0"/>
+  <assign name="def:VertCross" fore="#B" back="#0"/>
+  <assign name="def:Syntax"/>
+
+  <assign name="def:Number"    fore="#A"/>
+  <assign name="def:NumberSuffix" fore="#2"/>
+
+  <assign name="def:String" fore="#E"/>
+  <assign name="def:StringContent" fore="#6"/>
+  <assign name="def:StringEdge" fore="#F"/>
+  <assign name="def:CharacterContent" fore="#C"/>
+
+  <assign name="def:Comment" fore="#3"/>
+  <assign name="def:CommentContent" fore="#7"/>
+  <assign name="def:CommentEdge"    fore="#7"/>
+  <assign name="def:CommentDoc"     fore="#3"/>
+  <assign name="def:CommentDocEdge" fore="#7"/>
+
+  <assign name="def:Symbol" fore="#F"/>
+  <assign name="def:SymbolStrong" fore="#F"/>
+  <assign name="def:Prefix" fore="#F"/>
+
+  <assign name="def:Operator" fore="#F"/>
+
+  <assign name="def:Keyword" fore="#F"/>
+  <assign name="def:FunctionKeyword" fore="#A"/>
+  <assign name="def:DeprecatedKeyword" fore="#E"/>
+  <assign name="def:InterfaceKeyword" fore="#E"/>
+  <assign name="def:ClassKeyword" fore="#E"/>
+  <assign name="def:StructKeyword" fore="#E"/>
+  <assign name="def:TypeKeyword" fore="#E"/>
+
+  <assign name="def:Function" fore="#A"/>
+  <assign name="def:Register" fore="#E"/>
+  <assign name="def:Constant" fore="#B"/>
+  <assign name="def:Var" fore="#B"/>
+  <assign name="def:VarStrong" fore="#A"/>
+  <assign name="def:Identifier" fore="#B"/>
+  <assign name="def:BooleanConstant" fore="#7"/>
+
+  <assign name="def:Directive" fore="#A"/>
+  <assign name="def:Parameter" fore="#A"/>
+  <assign name="def:ParameterUnknown" fore="#B"/>
+
+  <assign name="def:Tag" fore="#7"/>
+  <assign name="def:OpenTag" fore="#B"/>
+  <assign name="def:CloseTag" fore="#B"/>
+
+  <assign name="def:Label" fore="#D"/>
+  <assign name="def:LabelStrong" fore="#1" back="#F"/>
+
+  <assign name="def:Insertion" fore="#7" back="#1"/>
+
+  <assign name="def:Error" fore="#C" back="#1"/>
+  <assign name="def:ErrorText" fore="#D"/>
+
+  <assign name="def:TODO" fore="#0" back="#6"/>
+  <assign name="def:Debug" fore="#0" back="#6"/>
+
+  <assign name="def:URI" fore="#C"/>
+  <assign name="def:Path" fore="#C"/>
+  <assign name="def:URL" fore="#C"/>
+  <assign name="def:EMail" fore="#E"/>
+
+  <assign name="def:Date" fore="#E"/>
+  <assign name="def:Time" fore="#A"/>
+  
+  <assign name="def:PairStart" fore="#C" back="#0"/>
+  <assign name="def:PairEnd" fore="#C" back="#0"/>
+  <assign name="def:PairStrongStart" fore="#E" back="#0"/>
+  <assign name="def:PairStrongEnd" fore="#E" back="#0"/>
+
+</hrd>
